# rust-social

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  rust-social.db
.github/workflows/: rust.yml
src/: admin.rs  lib.rs  main.rs  posts.rs  request.rs  user.rs  view.rs
www/: admin.html  admin.social  composepost.html  home.html  home.social  login.html  loginredirect.html  post.html  post.social  postalert.social  testpage.html
www/templates/: currentuser.social  header.social  loginform.social
www/user/: register.social
