[package]
name = "rust-social"
version = "0.1.0"
authors = ["Chloe Holmes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rust-crypto = "^0.2"
rand = "0.8.4"
config = "0.11"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]